@@ -2229,7 +2229,7 @@
         {
           "name": "GAMEPAD_BUTTON_RIGHT_FACE_RIGHT",
           "value": 6,
-          "description": "Gamepad right button right (i.e. PS3: Square, Xbox: X)"
+          "description": "Gamepad right button right (i.e. PS3: Circle, Xbox: B)"
         },
         {
           "name": "GAMEPAD_BUTTON_RIGHT_FACE_DOWN",
@@ -2239,7 +2239,7 @@
         {
           "name": "GAMEPAD_BUTTON_RIGHT_FACE_LEFT",
           "value": 8,
-          "description": "Gamepad right button left (i.e. PS3: Circle, Xbox: B)"
+          "description": "Gamepad right button left (i.e. PS3: Square, Xbox: X)"
         },
         {
           "name": "GAMEPAD_BUTTON_LEFT_TRIGGER_1",
@@ -3906,11 +3906,11 @@
           "name": "camera"
         },
         {
-          "type": "float",
+          "type": "int",
           "name": "width"
         },
         {
-          "type": "float",
+          "type": "int",
           "name": "height"
         }
       ]
@@ -11669,7 +11669,7 @@
     },
     {
       "name": "AttachAudioStreamProcessor",
-      "description": "Attach audio stream processor to stream, receives the samples as <float>s",
+      "description": "Attach audio stream processor to stream, receives the samples as 'float'",
       "returnType": "void",
       "params": [
         {
@@ -11699,7 +11699,7 @@
     },
     {
       "name": "AttachAudioMixedProcessor",
-      "description": "Attach audio stream processor to the entire audio pipeline, receives the samples as <float>s",
+      "description": "Attach audio stream processor to the entire audio pipeline, receives the samples as 'float'",
       "returnType": "void",
       "params": [
         {
