@@ -326,9 +326,9 @@ def generate_function(ctx, indent = "", module_name = "", function_prefix = "", 
     print(indent + "  ]", file = sys.stdout)
 
     print(indent +
-      """  entries.each do |entry|
+      r"""  entries.each do |entry|
       api_name = if method_naming == :snake_case
-                   snake_case_name = entry[0].to_s.gsub(/([A-Z]+)([A-Z0-9][a-z])/, '\\1_\\2').gsub(/([a-z\d])([A-Z0-9])/, '\\1_\\2').downcase
+                   snake_case_name = entry[0].to_s.gsub(/([A-Z]+)([A-Z0-9][a-z])/, '\1_\2').gsub(/([a-z\d])([A-Z0-9])/, '\1_\2').downcase
                    snake_case_name.gsub!('vector_3', 'vector3_') if snake_case_name.include?('vector_3')
                    snake_case_name.gsub!('vector_2', 'vector2_') if snake_case_name.include?('vector_2')
                    snake_case_name.chop! if snake_case_name.end_with?('_')
